# openapi-watchit.yaml
@@ -575,6 +575,93 @@ paths:
           $ref: '#/components/responses/NotFoundError'
         '500':
           $ref: '#/components/responses/DatabaseError'
+  /api/v1/user/watched/rate:
+    post:
+      summary: Rate a media
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommonMediaProperties'
+      responses:
+        '200':
+          description: Rated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: Media rated successfully
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+        '500':
+          $ref: '#/components/responses/DatabaseError'
+  /api/v1/user/watched/update:
+    patch:
+      summary: Update a media rate
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommonMediaProperties'
+      responses:
+        '200':
+          description: Updated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: Media rate updated successfully
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+        '500':
+          $ref: '#/components/responses/DatabaseError'
+  /api/v1/user/watched/remove/rating:
+    delete:
+      summary: Remove a media rating
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CommonMediaProperties'
+      responses:
+        '200':
+          description: Remove
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: Media rate remove successfully
+        '400':
+          $ref: '#/components/responses/ValidationError'
+        '404':
+          $ref: '#/components/responses/NotFoundError'
+        '500':
+          $ref: '#/components/responses/DatabaseError'
 
 components:
   responses:
@@ -818,6 +905,10 @@ components:
         mediaType:
           type: string
           example: movie
+        rating:
+          type: number
+          example: 8
+          nullable: true
 
     ErrorResponse:
       type: object
